--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,1 +1,37 @@
+cmake_minimum_required(VERSION 3.8)
+project(autonomous_docking)
 
+if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  add_compile_options(-Wall -Wextra -Wpedantic)
+endif()
+
+find_package(ament_cmake REQUIRED)
+find_package(rclpy REQUIRED)
+find_package(std_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(sensor_msgs REQUIRED)
+find_package(nav_msgs REQUIRED)
+find_package(tf2_ros REQUIRED)
+find_package(tf2_geometry_msgs REQUIRED)
+find_package(cv_bridge REQUIRED)
+find_package(vision_opencv REQUIRED)
+
+# Install Python modules
+install(PROGRAMS
+  src/aruco_detector.py
+  src/docking_controller.py
+  src/robot_driver.py
+  src/spawn_robot.py
+  DESTINATION lib/${PROJECT_NAME}
+)
+
+# Install launch files
+install(DIRECTORY
+  launch
+  config
+  urdf
+  worlds
+  DESTINATION share/${PROJECT_NAME}
+)
+
+ament_package()
